--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </div>
 
 <script>
-const BASE_URL = "https://cenotaphic-dianne-submembranous.ngrok-free.dev";
+const BASE_URL = "https://foxrole.onrender.com/";
 const ADMIN_LOGIN = "Fox01";
 let curLoc = "";
 let isFrozen = false;
@@ -379,4 +379,5 @@ setInterval(updateOnlineStatus, 10000);
 setInterval(() => { if (curLoc && document.getElementById("chat-room").classList.contains("active")) loadMessages(); }, 3000);
 </script>
 </body>
+
 </html>
