--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </div>
 
 <script>
-const BASE_URL = "https://foxrole.onrender.com/";
+const BASE_URL = "https://foxrole.onrender.com";
 const ADMIN_LOGIN = "Fox01";
 let curLoc = "";
 let isFrozen = false;
@@ -381,3 +381,4 @@ setInterval(() => { if (curLoc && document.getElementById("chat-room").classList
 </body>
 
 </html>
+
